<resources>
    <string name="fragment_app_name">LibFragment</string>

    <string name="fragment_rigger">Fragment_Rigger</string>
    <string name="fragment_sharedElement">SharedElement</string>
    <string name="fragment_lazyload">LazyLoad</string>
    <string name="fragment_replacefragment">ReplaceFragment</string>
    <string name="fragment_onBackPressed_show">onBackPressed_Show</string>
    <string name="fragment_showfragment">ShowFragment</string>
    <string name="fragment_startfragmentforresult">StartFragmentForResult</string>
    <string name="fragment_delay_startfragment">Delay StartFragment</string>
    <string name="fragment_startfragment">StartFragment</string>
    <string name="fragment_wechat">WeChat</string>
    <string name="fragment_contacts">Contacts</string>
    <string name="fragment_discover">Discover</string>
    <string name="fragment_me">Me</string>
    <string name="fragment_loading">Loading...</string>
</resources>
