<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ResourceName">

    <Button
        android:id="@+id/fs_startFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_startfragment"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/fs_startFragmentDelay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_delay_startfragment"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/fs_startFragmentForResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_startfragmentforresult"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/fs_showFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_showfragment"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/fs_replaceFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_replacefragment"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/fs_lazyload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_lazyload"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/fs_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_sharedElement"
        android:textAllCaps="false"
        android:visibility="gone"/>

</LinearLayout>